--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "keywords": [],
   "dependencies": {
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.42"
+    "moment-timezone": "^0.5.42",
+    "yargs": "^17.7.1"
   }
 }
